-- ===========================
-- 1. TIPOS DE DATOS (ENUMS)
-- ===========================
CREATE TYPE user_role AS ENUM ('client', 'vet');
CREATE TYPE consultation_status AS ENUM ('Programada', 'En Curso', 'Completada', 'Cancelada');
CREATE TYPE adherence_status AS ENUM ('Pendiente', 'Confirmada', 'Omitida');

-- ===========================
-- 2. CATÁLOGOS BASE
-- ===========================
CREATE TABLE sex (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(50) NOT NULL
);

CREATE TABLE species (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    is_exotic BOOLEAN DEFAULT false,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now()
);

CREATE TABLE breed (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    species_id BIGINT NOT NULL REFERENCES species(id),
    name VARCHAR(100) NOT NULL,
    description TEXT,
    reference_image_url VARCHAR,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now()
);

CREATE TABLE specialty (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description TEXT,
    icon_url VARCHAR,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now()
);

-- ===========================
-- 3. AUTENTICACIÓN Y PERFIL
-- ===========================
CREATE TABLE "user" (
    id UUID PRIMARY KEY, 
    sex_id BIGINT REFERENCES sex(id),
    role user_role NOT NULL,
    email VARCHAR(255) UNIQUE NOT NULL,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    phone VARCHAR(20),
    photo_url VARCHAR,
    latitude DECIMAL(10, 8),
    longitude DECIMAL(11, 8),
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now(),
    deleted_at TIMESTAMPTZ -- Borrado lógico
);

CREATE TABLE client (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID NOT NULL REFERENCES "user"(id),
    address TEXT,
    identity_document VARCHAR(20) UNIQUE,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now(),
    deleted_at TIMESTAMPTZ -- Borrado lógico
);

CREATE TABLE veterinarian (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID NOT NULL REFERENCES "user"(id),
    license_number VARCHAR(50) UNIQUE NOT NULL,
    years_experience INT,
    default_appointment_duration_minutes INT DEFAULT 30,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now(),
    deleted_at TIMESTAMPTZ -- Borrado lógico
);

-- ===========================
-- 4. ENTIDADES PRINCIPALES
-- ===========================
CREATE TABLE pet (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    client_id BIGINT NOT NULL REFERENCES client(id),
    breed_id BIGINT NOT NULL REFERENCES breed(id),
    sex_id BIGINT NOT NULL REFERENCES sex(id),
    name VARCHAR(100) NOT NULL,
    birth_date DATE,
    current_weight DECIMAL(5, 2),
    photo_url VARCHAR,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now(),
    deleted_at TIMESTAMPTZ -- Borrado lógico
);

CREATE TABLE veterinarian_availability (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    veterinarian_id BIGINT NOT NULL REFERENCES veterinarian(id),
    day_of_week INT NOT NULL, 
    start_time TIME NOT NULL,
    end_time TIME NOT NULL,
    slot_duration_minutes INT NOT NULL,
    is_active BOOLEAN DEFAULT true,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now()
);

-- ===========================
-- 5. MÓDULO DE CONSULTAS
-- ===========================
CREATE TABLE consultation (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_id BIGINT NOT NULL REFERENCES pet(id),
    veterinarian_id BIGINT NOT NULL REFERENCES veterinarian(id),
    status consultation_status DEFAULT 'Programada',
    consultation_datetime TIMESTAMPTZ NOT NULL,
    reason TEXT,
    diagnosis TEXT,
    is_contagious BOOLEAN DEFAULT false,
    prescribed_treatment TEXT,
    integrity_hash VARCHAR,
    rating INT,
    review_comment TEXT,
    review_datetime TIMESTAMPTZ,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now(),
    deleted_at TIMESTAMPTZ -- Borrado lógico
);

CREATE TABLE consultation_document (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    consultation_id BIGINT NOT NULL REFERENCES consultation(id),
    file_url VARCHAR NOT NULL,
    document_type VARCHAR(50) NOT NULL,
    created_at TIMESTAMPTZ DEFAULT now()
);

CREATE TABLE consultation_specialty (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    consultation_id BIGINT NOT NULL REFERENCES consultation(id) ON DELETE CASCADE,
    specialty_id BIGINT NOT NULL REFERENCES specialty(id) ON DELETE CASCADE,
    UNIQUE(consultation_id, specialty_id)
);

-- ===========================
-- 6. MÓDULO DE ADHERENCIA Y EPIDEMIOLOGÍA
-- ===========================
CREATE TABLE medication_schedule (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    consultation_id BIGINT NOT NULL REFERENCES consultation(id),
    medication_name VARCHAR(100) NOT NULL,
    dose VARCHAR(50),
    frequency_hours INT,
    start_datetime TIMESTAMPTZ NOT NULL,
    end_datetime TIMESTAMPTZ NOT NULL,
    created_by_trigger BOOLEAN DEFAULT false,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now()
);

CREATE TABLE treatment_adherence (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    medication_schedule_id BIGINT NOT NULL REFERENCES medication_schedule(id),
    scheduled_datetime TIMESTAMPTZ NOT NULL,
    confirmed_at TIMESTAMPTZ,
    status adherence_status DEFAULT 'Pendiente',
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now()
);

CREATE TABLE epidemiological_alert (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    consultation_id BIGINT NOT NULL REFERENCES consultation(id),
    disease_name VARCHAR(100) NOT NULL,
    origin_latitude DECIMAL(10, 8),
    origin_longitude DECIMAL(11, 8),
    radius_km DECIMAL(5, 2),
    active BOOLEAN DEFAULT true,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now(),
    resolved_at TIMESTAMPTZ
);

-- ===========================
-- 7. MÓDULO ESPECIES EXÓTICAS
-- ===========================
CREATE TABLE morphological_record (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_id BIGINT NOT NULL REFERENCES pet(id),
    photo_url VARCHAR,
    recorded_at DATE NOT NULL,
    weight_grams DECIMAL(8, 2),
    length_cm DECIMAL(5, 2),
    notes TEXT,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now()
);

CREATE TABLE legal_document (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_id BIGINT NOT NULL REFERENCES pet(id),
    document_type VARCHAR(100) NOT NULL,
    file_url VARCHAR NOT NULL,
    issued_by VARCHAR(100),
    issued_date DATE,
    cites_appendix VARCHAR(50),
    notes TEXT,
    created_at TIMESTAMPTZ DEFAULT now(),
    updated_at TIMESTAMPTZ DEFAULT now()
);